fix: add missing z-index to header

--- a/4_lekcija/css/portfolio.css
+++ b/4_lekcija/css/portfolio.css
@@ -20,6 +20,7 @@ header {
   top: 0;
   width: 100vw;
   height: 55px;
+  z-index: 100;
 }
 
 header div {
